[gd_scene load_steps=9 format=3 uid="uid://cu2m6mauukdmw"]

[ext_resource type="SpriteFrames" uid="uid://b14uegec5vjhg" path="res://Assets/HealthIcons/heartSpriteFrames.tres" id="1_14eod"]
[ext_resource type="Script" path="res://Scripts/playerController.gd" id="1_45py2"]
[ext_resource type="Texture2D" uid="uid://ccsrj0porhrac" path="res://Assets/0_Grip.png" id="2_5lm6g"]
[ext_resource type="Script" path="res://Scripts/HudScript.gd" id="2_7j2qc"]
[ext_resource type="ArrayMesh" uid="uid://cvdevypfln5hv" path="res://Assets/gun.obj" id="2_on7l3"]
[ext_resource type="Script" path="res://Scripts/PauseMenuScript.gd" id="6_r6sw0"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ga3tx"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_p0yfq"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[node name="Player" type="Node3D"]

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
script = ExtResource("1_45py2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.28656, 0)
cast_shadow = 0
mesh = SubResource("CapsuleMesh_ga3tx")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.28656, 0)
shape = SubResource("ConvexPolygonShape3D_p0yfq")

[node name="Head" type="Node3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.02079, 0)

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D/Head"]
fov = 90.0

[node name="LineTrace" type="RayCast3D" parent="CharacterBody3D/Head/Camera3D"]
target_position = Vector3(0, 0, -3)
debug_shape_custom_color = Color(1, 0, 1, 1)

[node name="gun" type="MeshInstance3D" parent="CharacterBody3D/Head/Camera3D"]
transform = Transform3D(0.0517638, 0, -0.193185, 0, 0.2, 0, 0.193185, 0, 0.0517638, 0.407121, -0.157314, -0.51847)
visible = false
mesh = ExtResource("2_on7l3")

[node name="HudCanvas" type="CanvasLayer" parent="CharacterBody3D/Head"]

[node name="HUD" type="Control" parent="CharacterBody3D/Head/HudCanvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_7j2qc")

[node name="healthSprite" type="AnimatedSprite2D" parent="CharacterBody3D/Head/HudCanvas/HUD"]
scale = Vector2(0.5, 0.5)
sprite_frames = ExtResource("1_14eod")
animation = &"HeartBeat"
centered = false
offset = Vector2(20, 20)

[node name="interactPrompt" type="TextureRect" parent="CharacterBody3D/Head/HudCanvas/HUD"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5lm6g")
expand_mode = 1

[node name="PauseMenu" type="Control" parent="CharacterBody3D/Head/HudCanvas"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_r6sw0")

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterBody3D/Head/HudCanvas/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Resume" type="Button" parent="CharacterBody3D/Head/HudCanvas/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Resume"

[node name="Quit" type="Button" parent="CharacterBody3D/Head/HudCanvas/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Quit"

[connection signal="pressed" from="CharacterBody3D/Head/HudCanvas/PauseMenu/VBoxContainer/Resume" to="CharacterBody3D/Head/HudCanvas/PauseMenu" method="_on_play_pressed"]
[connection signal="pressed" from="CharacterBody3D/Head/HudCanvas/PauseMenu/VBoxContainer/Quit" to="CharacterBody3D/Head/HudCanvas/PauseMenu" method="_on_quit_pressed"]
